# LLM-Decoder-Tuning-Text-Classification

./: Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/data/: amazon_13k.yaml  wipo_vision.yaml
configs/model/: llama3_2_1b.yaml
llm_cls/: __init__.py  cli.py  config.py  data.py  inference.py  metrics.py  model.py  split_amazon_13k_data.py  training.py  utils.py
outputs/meta-llama__Llama-3.2-1B/amazon_13k/run_0/: test_metrics.json
outputs/meta-llama__Llama-3.2-1B/amazon_13k/run_1/: test_metrics.json
outputs/meta-llama__Llama-3.2-1B/amazon_13k/run_2/: test_metrics.json
outputs/meta-llama__Llama-3.2-1B/amazon_13k/run_3/: test_metrics.json
sagemaker/: deploy_endpoint.py  inference.py  launch_training.py  requirements.txt  train_entry.py
scripts/: train_example.sh
tests/: test_data.py  test_metrics.py
